--- a/_layouts/base_with_comments.html
+++ b/_layouts/base_with_comments.html
@@ -29,6 +29,7 @@ common-js:
     {{ content }}
 
     {% include google_analytics.html %}
+    {% include disqus.html %}
     {% include footer.html %}
 
 
